Security işlemleri tamamlandı

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "ismaileneseroglu@gmail.com",
+    "Issuer": "ismaileneseroglu@gmail.com",
+    "AccesTokenExpiration": 10, //dakika açık kalsın
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
